0.2.1 Squashed 36 commits from Mon Apr 6 23:46:09 2020 to Sun Oct 18 21:44:58 2020 The whole library architecture has significantly rethinked and refactored